--- a/src/docs/nav/sidebar.module.css
+++ b/src/docs/nav/sidebar.module.css
@@ -147,6 +147,8 @@
 .sub-menu-nav :global(.nav-link):not(:global(.active)):hover {
     opacity: 1;
     color: var(--sidebar-active-color);
+    background-color: var(--sidebar-hover-bg);
+    border-radius: 8px;
     transform: translateX(4px);
     transition: transform 0.2s, color 0.2s;
 }
