--- a/src/component/v2/forms.module.css
+++ b/src/component/v2/forms.module.css
@@ -47,7 +47,8 @@
   gap: 5px;
   background-color: var(--bs-body-bg);
   color: var(--bs-body-color);
-  border: 1px solid var(--bs-border-color);
+  color: var(--bs-body-color);
+  border: 0.5px solid var(--bs-border-color);
   width: 100%;
 }
 
@@ -90,7 +91,7 @@
   width: 20px;
   height: 20px;
   background-color: white;
-  box-shadow: 0 2px 10px var(--bs-secondary-color);
+  box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   border: 1px solid var(--bs-border-color);
 }
@@ -114,14 +115,10 @@
 .popoverContent {
   width: var(--radix-popover-trigger-width);
   max-height: 50vh;
-  overflow-y: auto;
   background-color: var(--bs-body-bg);
+  border-radius: 20px;
   border: 1px solid var(--bs-border-color);
-  border-radius: 6px;
-  box-shadow:
-    0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05),
-    0 0 0 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   z-index: 2000;
   padding: 4px;
   animation-duration: 400ms;
@@ -148,7 +145,7 @@
 .suggestionItem {
   padding: 8px 12px;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 20px;
   font-size: 0.9rem;
   transition: background-color 0.15s ease, color 0.15s ease;
   color: var(--bs-body-color);
